--- a/templates/data.html
+++ b/templates/data.html
@@ -14,9 +14,9 @@
         <form class ="ui form" action= "/add" method ="post">
             <div classs = "field">
                 <p></p>
-                <input type ="text" name ="title" placeholder ="Enter Book..."><br> 
+                <input type ="text" name ="title" placeholder ="Excersise..."><br> 
                 <p></p>
-                <input type ="text" name="author" placeholder ="Enter Author..."><br>                 
+                <input type ="text" name="author" placeholder ="Trainer Name..."><br>                 
             </div>
             <button class ="ui blue button" type ="submit">Add</button>
 
