--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
               <a class="nav-link" href="/Home">Home |<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about">About |</a>
+              <a class="nav-link" href="/trainer">Trainers |</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/data">Data page |</a>
