--- a/templates/data.html
+++ b/templates/data.html
@@ -14,7 +14,7 @@
         <form class ="ui form" action= "/add" method ="post">
             <div classs = "field">
                 <p></p>
-                <input type ="text" name ="title" placeholder ="Excersise..."><br> 
+                <input type ="text" name ="title" placeholder ="Exercise..."><br> 
                 <p></p>
                 <input type ="text" name="author" placeholder ="Trainer Name..."><br>                 
             </div>
