--- a/templates/login.html
+++ b/templates/login.html
@@ -7,7 +7,6 @@
 </head>
 <body>
     <h1> Login page</h1>
-    <p> This is the Login page</p>
 </body>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> 
@@ -45,8 +44,6 @@
 
                 <form action="/login" method="POST"> 
         
-                <h3 style="text-align: center;">This is a login page</h3> 
-        
                 <p>User Name</p> 
         
                 <p><input type="text" id="nm" name="nm" /></p> 
@@ -67,7 +64,7 @@
         
                 <p><input type="submit" name="submit" /></p> 
         
-                <a class="nav-link" href='/register' style="text-align: center;">Need to Register?</a> 
+                <a class="nav-link" href='/register' style="text-align: left;">Need to Register?</a> 
         
                 </form> 
         
