--- a/templates/trainer.html
+++ b/templates/trainer.html
@@ -6,10 +6,25 @@
 
 
 <body>
-    <div class ="container">
+    <!-- <div class ="container">
     <div class="container">
         <img id="chad-image" src="../static/gigchad.png">
+        <img id = "jerma-image" src = "../static/smartjerma.jpeg">
     </div>
+    <div class = "card" style = "background-color: #7d7d7d; width: fit-content;" id = "people-card-grid"> -->
+        <div class = "card-body">
+            <h3 id = "about-text">Trainer</h3>
+            <div class = "card" style = "background-color: #ffff; width: fit-content; border-radius: 100px;">
+                <img src ="../static/cryingthing.jpeg" id = "profile-pic">
+        </div>    
+    </div>
+    <div class = "card m-1 p-1" style = "background-color: #ffff; height: fit-content;">
+        <h4 id = "about-text">Bio</h4>
+        <p id = "about-text"></p>
+    </div>
+    <div class = "card m-1 p-1" style = "background-color: #ffff; height: fit-content;">
+        <h4 id = "about-text"></h4>
+        <p id = "about-text"></p>
 
 </body>
 
