--- a/static/style.css
+++ b/static/style.css
@@ -45,9 +45,10 @@ a :active {
     float: left;
   }
 
-#chad-image{
-    float: left;
-    padding: 5px;
-    height: 150px;
-    width: 150px;
+#profile-pic{
+    max-width: 100px;
+    max-height: 100px;
+    border-radius: 100%;
+
   }
+
