--- a/templates/login.html
+++ b/templates/login.html
@@ -46,7 +46,7 @@
         
                 <p>User Name</p> 
         
-                <p><input type="text" id="nm" name="nm" /></p> 
+                <p><input type="text" id="nm" name="nm" autocomplete="off"/></p> 
         
                 <!-- <p>Email</p> 
         
