--- a/templates/base.html
+++ b/templates/base.html
@@ -27,9 +27,9 @@
               <a class="nav-link" href="/data">Data page |</a>
             </li>
             {% if current_session %}
-              <li class="nav-item">
-                <a class="nav-link" href="/logout">Logout |</a>
-              </li>
+            <li class = "mav-item">
+              <a class = "nav-link" href="/user">User page |</a>
+            </li>
             {% else %}
               <li class="nav-item">
                 <a class="nav-link" href="/login">Login page |</a>
