--- a/templates/data.html
+++ b/templates/data.html
@@ -3,6 +3,11 @@
 <head>
     <!-- <h1>{{ title }}</h1> -->
 
+        <style>
+            body {
+                font-family: Arial, sans-serif !important;
+            }
+        </style>
 
     <link rel="stylesheet" href='https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css'>
     <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
