--- a/templates/trainer.html
+++ b/templates/trainer.html
@@ -14,8 +14,8 @@
     <div class = "card" style = "background-color: #7d7d7d; width: fit-content;" id = "people-card-grid"> -->
         <div class = "card-body">
             <h3 id = "about-text">Trainer</h3>
-            <div class = "card" style = "background-color: #ffff; width: fit-content; border-radius: 100px;">
-                <img src ="../static/cryingthing.jpeg" id = "profile-pic">
+            <div class = "card" style = "background-color: rgb(0, 0, 0); width: fit-content; border-radius: 50px;">
+                <img src ="../static/smartjerma.jpeg" id = "profile-pic">
         </div>    
     </div>
     <div class = "card m-1 p-1" style = "background-color: #ffff; height: fit-content;">
@@ -23,9 +23,21 @@
         <p id = "about-text"></p>
     </div>
     <div class = "card m-1 p-1" style = "background-color: #ffff; height: fit-content;">
-        <h4 id = "about-text"></h4>
-        <p id = "about-text"></p>
-
+        <h4 id = "about-text">h</h4>
+        <p id = "about-text">a</p>
+    <br>
+        
+        <div class = "card" style = "background-color: rgb(0, 0, 0); width: fit-content; border-radius: 50px;">
+            <img src ="../static/susman.jpeg" id = "profile-pic">
+    </div>    
+</div>
+<div class = "card m-1 p-1" style = "background-color: #ffff; height: fit-content;">
+    <h5 id = "about-text">Bio</h5>
+    <p id = "about-text"></p>
+</div>
+<div class = "card m-1 p-1" style = "background-color: #ffff; height: fit-content;">
+    <h5 id = "about-text">h</h5>
+    <p id = "about-text">a</p>
 </body>
 
 
