--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <body style="background-color: #ffffff"></body>
+    <body style="background-color: #7d7d7d"></body>
     <head>
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
@@ -21,10 +21,13 @@
               <a class="nav-link" href="/Home">Home |<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/trainer">Trainers |</a>
+              <a class="nav-link" href="/Training Videos">Training Videos |</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/data">Data page |</a>
+              <a class="nav-link" href="/data">Booking Page |</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/Accessibility"> Accessibility |</a>
             </li>
             {% if current_session %}
             <li class = "mav-item">
