--- a/templates/data.html
+++ b/templates/data.html
@@ -21,9 +21,10 @@
                 <p></p>
                 <input type ="text" name ="title" placeholder ="Exercise..."><br> 
                 <p></p>
-                <input type ="text" name="author" placeholder ="Trainer Name..."><br>                 
+                <input type ="text" name="author" placeholder ="Trainer Name..."><br>                
             </div>
             <button class ="ui blue button" type ="submit">Add</button>
+            <p>STILL BEING WORKED ON SO NO FUNCIONALITY YET</p> 
 
         </form>
     </div> 
