--- a/static/style.css
+++ b/static/style.css
@@ -17,7 +17,7 @@ h2 {
 }
 
 p {
-    color: #1f1f1f;
+    color: #ffffff;
 }
 
 a {
@@ -69,3 +69,40 @@ a :active {
 } 
 
 
+
+
+
+.Header{
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    background-color: transparent;
+    margin-left: auto;
+    margin-right: auto;
+    width: 300px;
+    
+}
+
+.Header2{
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    font-size: large;
+    background-color: #302d2e;
+    margin-left: auto;
+    margin-right: auto;
+    width: 300px;
+}
+
+.sub{
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    font-size: large;
+    background-color: #302d2e;
+    margin-left: auto;
+    margin-right: auto;
+    width: 300px;
+}
+
+.video1{
+    margin-right: 1400px;
+
+}
