--- a/templates/index.html
+++ b/templates/index.html
@@ -3,18 +3,28 @@
 <head>
     <h1>{{title}}</h1>
     <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='style.css') }}">
+
 </head>
 
 <body>
-    <h2> </h2>
+    <body style="background-color:#7d7d7d; ">
+    <div   class="Header">
     {% if current_session %}
-        <h2>Hello {{ current_session }}</h2>
+    <h2>Welcome {{ current_session }}</h2>
     {% endif %}
     <h2>
+    <div class = "Header2">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    </div>
+    <div class = "sub">
+        <h3> Subscriptions</h3>
+        <p> This is where the users will first see the Subscriptions that we offer</p>
+    </div>
+    <img src="../static/Man.jpg" width="500px" height="575px" style="position:absolute; left: 60px; top: 150px;">
+    <img src="../static/Women.jpg" width="500px" height="575px" style="position:absolute; right:60px; top: 150px;">
 
 
-
-
+    </div>
 </body>
 {% endblock %}
 
