--- a/templates/trainer.html
+++ b/templates/trainer.html
@@ -6,38 +6,10 @@
 
 
 <body>
-    <!-- <div class ="container">
-    <div class="container">
-        <img id="chad-image" src="../static/gigchad.png">
-        <img id = "jerma-image" src = "../static/smartjerma.jpeg">
+    <div class="video1">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/FRWEMBe2BCg?autoplay=1">
+    </iframe>
     </div>
-    <div class = "card" style = "background-color: #7d7d7d; width: fit-content;" id = "people-card-grid"> -->
-        <div class = "card-body">
-            <h3 id = "about-text">Trainer</h3>
-            <div class = "card" style = "background-color: rgb(0, 0, 0); width: fit-content; border-radius: 50px;">
-                <img src ="../static/smartjerma.jpeg" id = "profile-pic">
-        </div>    
-    </div>
-    <div class = "card m-1 p-1" style = "background-color: #ffff; height: fit-content;">
-        <h4 id = "about-text">Bio</h4>
-        <p id = "about-text"></p>
-    </div>
-    <div class = "card m-1 p-1" style = "background-color: #ffff; height: fit-content;">
-        <h4 id = "about-text">h</h4>
-        <p id = "about-text">a</p>
-    <br>
-        
-        <div class = "card" style = "background-color: rgb(0, 0, 0); width: fit-content; border-radius: 50px;">
-            <img src ="../static/susman.jpeg" id = "profile-pic">
-    </div>    
-</div>
-<div class = "card m-1 p-1" style = "background-color: #ffff; height: fit-content;">
-    <h5 id = "about-text">Bio</h5>
-    <p id = "about-text"></p>
-</div>
-<div class = "card m-1 p-1" style = "background-color: #ffff; height: fit-content;">
-    <h5 id = "about-text">h</h5>
-    <p id = "about-text">a</p>
 </body>
 
 
